package com.demo.domain.project;

public class HandleEvent {
}
