package com.demo.domain.project;

public class Project {
}
