package com.demo.domain.project;

public class ProjectMaterial {
}
