@startuml
package project <<Aggregate>>{

class Project <<Aggregate>>{
String id
String projectNo
String projectName
String taskId
----
void process()
void save()
}

class ProjectResult <<Value Object>>

class ProjectMaterial <<Entity>>

class HandleEvent{
Project project
approve()
returnApproval()
}

Project "1" *-- "1" ProjectResult
Project "1" *-- "1..n" ProjectMaterial
Project <-- HandleEvent



}
@enduml